[gd_scene load_steps=14 format=2]

[ext_resource path="res://Textures/explosion-6.png" type="Texture" id=1]
[ext_resource path="res://DamageBoxes/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/Bow Shot/Explosion.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=10]
radius = 23.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Explosion" type="Node2D"]
z_index = 2
script = ExtResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 2 )
damage = 50
knockback = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 10 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 3

[node name="HitboxActivationTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="HitboxDeactivationTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="HitboxActivationTimer" to="." method="_on_HitboxActivationTimer_timeout"]
[connection signal="timeout" from="HitboxDeactivationTimer" to="." method="_on_HitboxDeactivationTimer_timeout"]
